--- a/todos_api/package.json
+++ b/todos_api/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/henry22/todo-list/issues"
   },
-  "homepage": "https://github.com/henry22/todo-list#readme"
+  "homepage": "https://github.com/henry22/todo-list#readme",
+  "dependencies": {
+    "express": "^4.16.3",
+    "mongoose": "^5.2.17"
+  }
 }
