--- a/todos_api/package.json
+++ b/todos_api/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/henry22/todo-list#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.17"
   }
